# ChessRobot2023FYP

./: CMakeLists.txt  CVRun  CVTest11.cpp  CVTest12.cpp  CVTest13.cpp  CVTest14.cpp  CVTest15.cpp  CVTest16.cpp  CVTest17.cpp  CVTest18.cpp  CVTest19.cpp  CVTest2.cpp  CVTest3.cpp  CVTest5.cpp  CVTest7.cpp  CapImg  Cap_Img  Conversion.py  GoToPos.py  Img_Cap  LogicTesting.cpp  OnlyVision.cpp  OpenCV_Chessboard  OpenCV_Testing  OpenCV_Testing.cpp  README.md  Vision.cpp  Vision.h  VisionExec  analyse  anglesForServo.py  calibration.py  callStockfish.cpp  capture_image  capture_image.cpp  chessRobot  chessRobot1400  chessRobot2  chessRobot3  chessRobot4  (+38 more)
0 SS/: makeMove.cpp  moveMatrixRun  test.cpp
Interface Testing/: Interface  Interface.cpp  Interface.py
SS CV Test History/: CVTest10.cpp  CVTest15.cpp  CVTest16.cpp  CVTest17.cpp  CVTest18.cpp  CVTest4.cpp  CVTest6.cpp  CVTest8.cpp  CVTest9.cpp
motor controls/: hall_effect.py  linear_acc.py
pypose/: GoToPos.py  Run.py  driver.py  driverOG.py  jamesTesting.py  runRobot.py
pypose/SS/: jamesTesting.py
selfControlDynamixel/: selfControl.py
